# pathfinder_rasterizer

./: Cargo.toml  README.md  rasterize.py  setup.py  tryPython.py
pathfinder_rasterizer/: __init__.py  utils.py
pathfinder_rasterizer.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
src/: lib.rs  main.rs  rasterizer.rs
