[package]
name = "pathfinder_rasterizer"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
pathfinder_geometry  = { path = "../pathfinder/geometry" }
pathfinder_content   = { path = "../pathfinder/content" }
pathfinder_color     = { path = "../pathfinder/color" }
pathfinder_gl        = { path = "../pathfinder/gl" }
pathfinder_gpu       = { path = "../pathfinder/gpu" }
pathfinder_renderer  = { path = "../pathfinder/renderer" }
pathfinder_resources = { path = "../pathfinder/resources" }
pathfinder_svg       = { path = "../pathfinder/svg" }
pdf_font = { git = "https://github.com/pdf-rs/font", package="font" }
gl = "*"
khronos-egl = { version = "*", features = ["static"] }
usvg = "0.9.1"
image = "*"
